separation tested, newhire validation fixed

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -222,7 +222,7 @@ What are the specific assets and or functionalities needed:<br >
 <p ></p >
 <br >
 <span class="subHeader" >IT Oracle Specialist</span >
-<ul style="list-style: none" >
+    <ul class="listNoBullets" >
     <li >
         <label ><input type="checkbox" class="inputRender" name="oracle" id="oracle"
                        value="Oracle Access (Sales, Finance, Logistics, Customer Care, IT, Tech Svcs)" > Oracle
