-style in the report pd fixed - new style sheet created for pdf export

--- a/resources/handlebars/change_org.hbs
+++ b/resources/handlebars/change_org.hbs
@@ -16,7 +16,6 @@
 
     <p ></p ><br ><br >
 
-
     <div class="left" >
         <label >Email</label >
         <input type="text" class="inputRender" name="newEmail" id="newEmail" value="{{ data.fromAD.mail }}" required >
@@ -76,7 +75,7 @@
         <label >
             Effective Date</label >
         <input class="inputRender" name="effectiveDate" id="effectiveDate" style="width: 100px"
-               required="" value="06/03/2015" placeholder="mm/dd/yyyy" >
+               required="" value="" placeholder="mm/dd/yyyy" >
         <span class="errorSpan" >*</span >
 
         <div id="termDateError" class="errorSpan" ></div >
