- style in separation report updated

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -86,7 +86,8 @@
     <span id="hireStatusError" class="errorSpan" >*</span >
 </div >
 <div class="left" >
-    Location: <input type="text" class="inputRender" name="location" id="location" value="" >
+    Location: <input type="text" class="inputRender" name="location" id="location" value="{{ data.fromAD.location }}" >
+
 </div >
 
 <p ></p ><br >
