- manager removed as a required field for org change

--- a/resources/handlebars/change_org.hbs
+++ b/resources/handlebars/change_org.hbs
@@ -61,8 +61,7 @@
     <div class="left" >
         <label >Manager</label >
         <input type="text" name="manager" id="manager" class="inputRender" autocomplete="off"
-               value="{{ data.fromAD.manager }}"
-               required="" >
+               value="{{ data.fromAD.manager }}">
         <span id="searchProgressManager" ></span >
     </div >
     <div class="left" >
