cellphone and deskphone wasn't populating the information properly

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -195,11 +195,9 @@
         {{/if}}
 
     " >
-        Phone extension
+        Phone extension <span id="telephonenumber"></span>
 
-        {{#if data.fromAD.telephonenumber }}
-            (current {{ data.fromAD.telephonenumber }})
-        {{/if}}
+
     </label ></li >
     <li ><label ><input type="checkbox" class="inputRender" name="iTDept[]" id="software" value="Software" >
         Software</label ></li >
