- in new hire replaced name and lastname vars for fullName - new email notification added to newHire to notify application team to create JDE user in the system -

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -223,7 +223,7 @@
 
     <p ></p >
     <br >
-    <span class="subHeader" >JDE Setup - Harshun Kondla</span >
+    <span class="subHeader" >JDE Setup - IT Team</span >
     <ul class="listNoBullets" >
         <li >
             <label ><input type="checkbox" class="inputRender" name="application" id="application"
