- new section added per HR request: payroll status

--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -133,3 +133,9 @@ body{
 .listNoBullets{
     list-style: none;
 }
+
+.centerInsideLi {
+  text-align: center;
+  margin: auto;
+  display: table;
+}
