--- a/resources/assets/less/theForms.less
+++ b/resources/assets/less/theForms.less
@@ -21,6 +21,7 @@
     list-style: none outside;
     margin:0px;
     padding:0px;
+
 }
 
 .processForm li{
@@ -28,6 +29,7 @@
     list-style: none outside;
     margin:0px;
     padding: 12px;
+  overflow: hidden;
 }
 
 .processForm label {
