--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -45,7 +45,7 @@
     </div >
 
     <p ></p ><br ><br >
-                <span class="subHeader" >
+    <span class="subHeader" >
                 Separation:
                     </span >
     <hr >
@@ -75,15 +75,14 @@
     <p ></p ><br >
 
     <div class="left" >
-        <label >Employee Status</label >
-
-        <select class="inputRender" name="hireStatus" id="hireStatus" >
-            <option value="" >Select</option >
-            {{#each data.hireStatus }}
+        <label >Payroll Type</label >
+        <select class="inputRender" name="payrollType" id="payrollType" >
+            <option value="" >Select Payroll Type</option >
+            {{#each data.payrollType }}
                 <option >{{this}}</option >
             {{/each}}
         </select >
-        <span id="hireStatusError" class="errorSpan" >*</span >
+
     </div >
     <div class="left" >
         Location: <input type="text" class="inputRender" name="location" id="location"
@@ -94,7 +93,7 @@
     <p ></p ><br >
     <br >
 
-<span class="checkbox" >
+    <span class="checkbox" >
 <ul >
     <li >
     <label ><input type="checkbox" class="inputRender" name="onetime" id="onetime" value="onetime" > One time Severance
@@ -141,7 +140,7 @@
 
 
     <p ></p ><br >
-           <span class="subHeader" >
+    <span class="subHeader" >
                 IT Service Desk E-Mail Distribution List:
                </span >
     <hr >
@@ -158,7 +157,7 @@
     (Check groups the user will be removed from)
 
 
-<span class="checkbox" >
+    <span class="checkbox" >
     <ul id="itChecklist" style="text-align: left; list-style: none" >
         <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]"
                             value="illyusaTeam Distribution Group"
@@ -180,7 +179,7 @@
 </span >
 
     <p ><span >Assets</span ></p >
-<span class="checkbox" >
+    <span class="checkbox" >
     <ul id="itChecklistAssets" style="text-align: left; list-style: none" >
         <li ><label ><input type="checkbox" class="inputRender" name="iTDept[]" id="email"
                             value="e-mail Scanner (if applicable)" > e-mail Scanner (if applicable)</label ></li >
@@ -246,7 +245,7 @@
     <br ><br >
 
     <div class="subHeader" >HQ Office Manager-Suzie Schwab and Stephanie Brush</div >
-<span class="checkbox" >
+    <span class="checkbox" >
     <ul style="list-style: none" >
         <li >
             <label ><input type="checkbox" class="inputRender" name="oManager[]" id="accessCard"
