- Name removed form office manager section - payroll section added for separation "Cobra rates"

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -244,7 +244,7 @@
 
     <br ><br >
 
-    <div class="subHeader" >HQ Office Manager-Suzie Schwab and Stephanie Brush</div >
+    <div class="subHeader" >HQ Office Manager-Suzie Schwab</div >
     <span class="checkbox" >
     <ul style="list-style: none" >
         <li >
@@ -296,6 +296,18 @@
         </li >
     </ul >
         </span >
+
+    <p ></p ><br >
+
+    <div class="subHeader" > Benefits/Payroll Manager - Maritza Zelvin</div >
+    <span class="checkbox" >
+    <ul style="list-style: none" >
+        <li >
+            <label ><input type="checkbox" class="inputRender" name="payroll[]" id="cobra" value="Cobra Rates" >Cobra Rates</label >
+        </li >
+        </ul >
+        </span >
+
     <p ></p ><br >
 
     <input type="button" id="cancel" class="inputRender" value="Cancel" >
